Business Understanding updated to include challenges in variables

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "source": [
     "# Data Science Project\n",
-    "## Christopher Healy D00270638\n",
-    "\n",
-    "## Using Data Science to predict the popularity of Reddit posts."
+    "#### Christopher Healy D00270638\n",
+    "#### Using Data Science to predict the popularity of Reddit posts."
    ]
   },
   {
@@ -25,28 +24,19 @@
     "- Musicians/performers trying to build a platform.\n",
     "- \"Influencers\" trying to gain recognition.\n",
     "\n",
-    "### Defining Success:\n",
-    "The success/popularity of a Reddit post can be measured with \"Karma\" which corresponds to the total sum of ratings on a post, i.e. upvotes minus downvotes.\n",
+    "The success/popularity of a Reddit post can be measured with \"Karma\", a numerical value which corresponds to the total sum of ratings on a post, i.e. upvotes minus downvotes.\n",
+    "\n",
     "\n",
     "### Aims of the project.\n",
-    "Determining how a Reddit post's popularity is influenced can allow these groups to achieve the maximum reach possible. By analysing the information associated with Reddit posts and comparing it to their popularity, I hope to answer:\n",
+    "Determining how a Reddit post's Karma is influenced can allow these groups to achieve the maximum reach possible. By analysing the information associated with Reddit posts and comparing it to their popularity, I hope to answer:\n",
     "1. How is post length connected to post success?\n",
     "2. Is date/time of posting relevant to a post's success.\n",
     "3. How does the \"mood\" found in a post's body influence its success?\n",
-    "4. Are there any other factors that affect how a Reddit post will be received?\n"
+    "4. How do attached photos impact post performance?\n",
+    "5. Are there any other factors that affect how a Reddit post will be received?\n",
+    "\n",
+    "Posts can be analysed to determine their \"mood\" from their content, this will need to be done before any machine learning models can be trained. Similarly, if post photos are included in the data they will need to be classified in some way so that their influence on post Karma can be quantitatively seen."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23cdd755",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72787edf",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
