Data Scraping carried out, data obtained from reddit API and saved in .csv file

--- a/DataMining.ipynb
+++ b/DataMining.ipynb
@@ -7,36 +7,23 @@
    "source": [
     "# Data Mining\n",
     "To use praw:\n",
-    "`pip install praw`"
+    "`pip install praw`\n",
+    "\n",
+    "## Data Source\n",
+    "Data is gathered from a variety of subreddits to ensure a mix of post topics and audience sizes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "29971bd8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For Anyone asking \"What Breed is my cat?\"\n",
-      "Discussion Thread - Ask, Share, and Discuss Anything About Cats.\n",
-      "Woke up at 2 am and rolled over…\n",
-      "Cat brings my bra to his food bowl\n",
-      "After almost two years, they’ve finally decided that they like one another.\n",
-      "His first night off the street\n",
-      "Well that escalated quickly\n",
-      "What do you think of my cat?\n",
-      "Why does my friend's cat do that? I hardly ever see him, but when I come to visit, he never leaves my side. I only have dogs but this little fella makes me want to have a cat someday lol\n",
-      "My cat constantly sleeps up here beside me. Does he think he owns me?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import praw\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "import csv\n",
     "\n",
     "# env variables\n",
     "load_dotenv()\n",
@@ -48,14 +35,25 @@
     "USER_AGENT = f\"windows:{APP_NAME}:v1.0 (by /u/{USERNAME})\"\n",
     "\n",
     "\n",
+    "SUBREDDITS = [\"funny\", \"todayilearned\", \"technology\", \"aww\", \"worldnews\", \"food\", \"gaming\"]\n",
+    "VARIABLES = [\"id\", \"title\", \"created_utc\", \"ups\", \"downs\", \"is_video\", \"selftext\", \"is_self\"]\n",
+    "\n",
+    "\n",
     "reddit = praw.Reddit(\n",
     "    client_id=CLIENT_ID,\n",
     "    client_secret=SECRET,\n",
     "    user_agent=USER_AGENT\n",
     ")\n",
     "\n",
-    "for submission in reddit.subreddit(\"cats\").hot(limit=10):\n",
-    "    print(submission.title)\n"
+    "# using csv library to avoid dealing with comma/quotes/other chars that would need to be escaped\n",
+    "# https://stackoverflow.com/questions/2425272/how-to-dynamically-access-class-properties-in-python referenced to fix issue looping through submission object\n",
+    "with open(\"reddit_data.csv\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    csv_writer = csv.writer(f)\n",
+    "    csv_writer.writerow(VARIABLES)\n",
+    "    for sub in SUBREDDITS:        \n",
+    "        for submission in reddit.subreddit(sub).new(limit=6000):\n",
+    "            data = [getattr(submission, var) for var in VARIABLES]\n",
+    "            csv_writer.writerow(data)\n"
    ]
   },
   {
