Completed Data Mining Documentation

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -35,7 +35,25 @@
     "4. How do attached photos impact post performance?\n",
     "5. Are there any other factors that affect how a Reddit post will be received?\n",
     "\n",
-    "Posts can be analysed to determine their \"mood\" from their content, this will need to be done before any machine learning models can be trained. Similarly, if post photos are included in the data they will need to be classified in some way so that their influence on post Karma can be quantitatively seen."
+    "Posts can be analysed to determine their \"mood\" from their content, this will need to be done before any machine learning models can be trained. Similarly, if post photos are included in the data they will need to be classified in some way so that their influence on post Karma can be quantitatively seen.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfedcc0e",
+   "metadata": {},
+   "source": [
+    "# Step 2: Data Mining\n",
+    "\n",
+    "See separate Jupyter Notebook \"DataMining.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bab2ae15",
+   "metadata": {},
+   "source": [
+    "# Step 3\n"
    ]
   }
  ],
