--- a/DataMining.ipynb
+++ b/DataMining.ipynb
@@ -10,7 +10,13 @@
     "`pip install praw`\n",
     "\n",
     "## Data Source\n",
-    "Data is gathered from a variety of subreddits to ensure a mix of post topics and audience sizes"
+    "Data is gathered from a variety of subreddits to ensure a mix of post topics and audience sizes.\n",
+    "\n",
+    "To fetch data I create an instance of the praw Reddit class.\n",
+    "From here I send a request to the reddit API to fetch information from some popular subreddits.\n",
+    "To ensure a wide variety of success levels and avoid \"survivorship bias\" in the data, I decided to request the 6000 most recent posts, which should cover a wide enough time to include highly successful and less successful posts.\n",
+    "\n",
+    "I then parsed the data points I want to analyse into a csv file using the python csv library."
    ]
   },
   {
@@ -55,14 +61,6 @@
     "            data = [getattr(submission, var) for var in VARIABLES]\n",
     "            csv_writer.writerow(data)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d322e63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
