started data cleaning

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -44,6 +44,16 @@
    "metadata": {},
    "source": [
     "# Step 2: Data Mining\n",
+    "The data is gathered from the Reddit API using the Python Reddit API Wrapper (praw).\n",
+    "Post information is gathered from a variety of popular subreddits to ensure a variety of themes and audiences.\n",
+    "The data fetched includes a variety of information on posts submitted to the following subreddits:\n",
+    "- r/funny\n",
+    "- r/todayilearned\n",
+    "- r/technology\n",
+    "- r/aww\n",
+    "- r/worldnews\n",
+    "- r/food\n",
+    "- r/gaming\n",
     "\n",
     "See separate Jupyter Notebook \"DataMining.ipynb\""
    ]
@@ -53,8 +63,185 @@
    "id": "bab2ae15",
    "metadata": {},
    "source": [
-    "# Step 3\n"
+    "# Step 3 - Data Cleaning\n",
+    "### Datapoints used:\n",
+    "| Variable      | Type                | Notes                                                         |\n",
+    "|---------------|---------------------|---------------------------------------------------------------|\n",
+    "| id            | Nominal Categorical | Not Important                                                 |\n",
+    "| title         | Nominal Categorical | Theme can be extracted from content. Length may be relevant   |\n",
+    "| subreddit     | Nominal Categorical | Important                                                     |\n",
+    "| created_utc   | Discrete Numerical  | May be useful for determining if time of day impacts success. |\n",
+    "| ups           | Discrete Numerical  | Important                                                     |\n",
+    "| downs         | Discrete Numerical  | Important                                                     |\n",
+    "| is_video      | Nominal Categorical | Important                                                     |\n",
+    "| self_text     | Nominal Categorical | Theme can be extracted, length may be important               |\n",
+    "| is_self       | Nominal Categorical | Possibly relevant                                             |\n",
+    "| title_length  | Discrete Numerical  | (Calculated Manually) Possibly relevant                       |\n",
+    "| post_length   | Discrete Numerical  | (Calculated Manually) Possibly Relevant                       |\n",
+    "| up_down_ratio | Continous Numerical | (Calculated Manually) Important                               |\n",
+    "| post_theme    | Nominal Categorical | (Calculated through API) Possibly important                   |\n",
+    "| score         | Discrete Numerical  | (Calculated Manually) Used to determine post success          |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "160881da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7212a107",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>ups</th>\n",
+       "      <th>downs</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>is_self</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1ou9lw7</td>\n",
+       "      <td>Train employee</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1.762868e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1ou97dx</td>\n",
+       "      <td>Indeed a Best job</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1.762867e+09</td>\n",
+       "      <td>363</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1ou7n0f</td>\n",
+       "      <td>The fear of flying sandal is universal</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1.762862e+09</td>\n",
+       "      <td>2139</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1ou4p4t</td>\n",
+       "      <td>Your lawn guy knows something you don't</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1.762852e+09</td>\n",
+       "      <td>2610</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1ou3mas</td>\n",
+       "      <td>The irony of this ad in this article</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1.762848e+09</td>\n",
+       "      <td>126</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Ironic humor brought to you by an algorithm...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                    title subreddit   created_utc  \\\n",
+       "0  1ou9lw7                           Train employee     funny  1.762868e+09   \n",
+       "1  1ou97dx                        Indeed a Best job     funny  1.762867e+09   \n",
+       "2  1ou7n0f   The fear of flying sandal is universal     funny  1.762862e+09   \n",
+       "3  1ou4p4t  Your lawn guy knows something you don't     funny  1.762852e+09   \n",
+       "4  1ou3mas     The irony of this ad in this article     funny  1.762848e+09   \n",
+       "\n",
+       "    ups  downs  is_video                                        selftext  \\\n",
+       "0     0      0      True                                             NaN   \n",
+       "1   363      0     False                                             NaN   \n",
+       "2  2139      0      True                                             NaN   \n",
+       "3  2610      0      True                                             NaN   \n",
+       "4   126      0     False  Ironic humor brought to you by an algorithm...   \n",
+       "\n",
+       "   is_self  \n",
+       "0    False  \n",
+       "1    False  \n",
+       "2    False  \n",
+       "3    False  \n",
+       "4    False  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#load data\n",
+    "reddit_data = pd.read_csv(\"reddit_data.csv\", quotechar='\"', escapechar='\\\\')\n",
+    "reddit_data.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb34dea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -64,7 +251,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
