--- a/DataMining.ipynb
+++ b/DataMining.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "29971bd8",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "SUBREDDITS = [\"funny\", \"todayilearned\", \"technology\", \"aww\", \"worldnews\", \"food\", \"gaming\"]\n",
-    "VARIABLES = [\"id\", \"title\", \"created_utc\", \"ups\", \"downs\", \"is_video\", \"selftext\", \"is_self\"]\n",
+    "VARIABLES = [\"id\", \"title\", \"subreddit\", \"created_utc\", \"ups\", \"downs\", \"is_video\", \"selftext\", \"is_self\"]\n",
     "\n",
     "\n",
     "reddit = praw.Reddit(\n",
@@ -61,6 +61,14 @@
     "            data = [getattr(submission, var) for var in VARIABLES]\n",
     "            csv_writer.writerow(data)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf19060d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
