Stage 3: data cleaning completed

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -67,180 +67,200 @@
     "### Datapoints used:\n",
     "| Variable      | Type                | Notes                                                         |\n",
     "|---------------|---------------------|---------------------------------------------------------------|\n",
-    "| id            | Nominal Categorical | Not Important                                                 |\n",
-    "| title         | Nominal Categorical | Theme can be extracted from content. Length may be relevant   |\n",
-    "| subreddit     | Nominal Categorical | Important                                                     |\n",
-    "| created_utc   | Discrete Numerical  | May be useful for determining if time of day impacts success. |\n",
-    "| ups           | Discrete Numerical  | Important                                                     |\n",
-    "| downs         | Discrete Numerical  | Important                                                     |\n",
-    "| is_video      | Nominal Categorical | Important                                                     |\n",
-    "| self_text     | Nominal Categorical | Theme can be extracted, length may be important               |\n",
-    "| is_self       | Nominal Categorical | Possibly relevant                                             |\n",
-    "| title_length  | Discrete Numerical  | (Calculated Manually) Possibly relevant                       |\n",
-    "| post_length   | Discrete Numerical  | (Calculated Manually) Possibly Relevant                       |\n",
-    "| up_down_ratio | Continous Numerical | (Calculated Manually) Important                               |\n",
-    "| post_theme    | Nominal Categorical | (Calculated through API) Possibly important                   |\n",
-    "| score         | Discrete Numerical  | (Calculated Manually) Used to determine post success          |"
+    "| id            | Nominal Categorical | Ignore                                                        |\n",
+    "| title         | Nominal Categorical | Length of title is important, otherwise ignored               |\n",
+    "| subreddit     | Nominal Categorical | Explanatory                                                   |\n",
+    "| created_utc   | Discrete Numerical  | Used to determine is_weekend, then ignored                    |\n",
+    "| ups           | Discrete Numerical  | Explanatory                                                   |\n",
+    "| downs         | Discrete Numerical  | Explanatory                                                   |\n",
+    "| num_comments  | Discrete Numerical  | Explanatory                                                   |\n",
+    "| is_video      | Nominal Categorical | Explanatory                                                   |\n",
+    "| selftext      | Nominal Categorical | Length of text is important, otherwise ignored                |\n",
+    "| is_self       | Nominal Categorical | Explanatory                                                   |\n",
+    "| upvote_ratio  | Continous Numerical | Explanatory                                                   |\n",
+    "| title_length  | Discrete Numerical  | (Calculated Manually) Explanatory                             |\n",
+    "| post_length   | Discrete Numerical  | (Calculated Manually) Explanatory                             |\n",
+    "| is_weekend_post| Nominal Categorical | Explanatory                                                   |\n",
+    "| score         | Discrete Numerical  | Response Variable                                             |\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "160881da",
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7212a107",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>subreddit</th>\n",
-       "      <th>created_utc</th>\n",
-       "      <th>ups</th>\n",
-       "      <th>downs</th>\n",
-       "      <th>is_video</th>\n",
-       "      <th>selftext</th>\n",
-       "      <th>is_self</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1ou9lw7</td>\n",
-       "      <td>Train employee</td>\n",
-       "      <td>funny</td>\n",
-       "      <td>1.762868e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1ou97dx</td>\n",
-       "      <td>Indeed a Best job</td>\n",
-       "      <td>funny</td>\n",
-       "      <td>1.762867e+09</td>\n",
-       "      <td>363</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1ou7n0f</td>\n",
-       "      <td>The fear of flying sandal is universal</td>\n",
-       "      <td>funny</td>\n",
-       "      <td>1.762862e+09</td>\n",
-       "      <td>2139</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1ou4p4t</td>\n",
-       "      <td>Your lawn guy knows something you don't</td>\n",
-       "      <td>funny</td>\n",
-       "      <td>1.762852e+09</td>\n",
-       "      <td>2610</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1ou3mas</td>\n",
-       "      <td>The irony of this ad in this article</td>\n",
-       "      <td>funny</td>\n",
-       "      <td>1.762848e+09</td>\n",
-       "      <td>126</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Ironic humor brought to you by an algorithm...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id                                    title subreddit   created_utc  \\\n",
-       "0  1ou9lw7                           Train employee     funny  1.762868e+09   \n",
-       "1  1ou97dx                        Indeed a Best job     funny  1.762867e+09   \n",
-       "2  1ou7n0f   The fear of flying sandal is universal     funny  1.762862e+09   \n",
-       "3  1ou4p4t  Your lawn guy knows something you don't     funny  1.762852e+09   \n",
-       "4  1ou3mas     The irony of this ad in this article     funny  1.762848e+09   \n",
-       "\n",
-       "    ups  downs  is_video                                        selftext  \\\n",
-       "0     0      0      True                                             NaN   \n",
-       "1   363      0     False                                             NaN   \n",
-       "2  2139      0      True                                             NaN   \n",
-       "3  2610      0      True                                             NaN   \n",
-       "4   126      0     False  Ironic humor brought to you by an algorithm...   \n",
-       "\n",
-       "   is_self  \n",
-       "0    False  \n",
-       "1    False  \n",
-       "2    False  \n",
-       "3    False  \n",
-       "4    False  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#load data\n",
-    "reddit_data = pd.read_csv(\"reddit_data.csv\", quotechar='\"', escapechar='\\\\')\n",
-    "reddit_data.head()\n",
-    "\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7212a107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6867 entries, 0 to 6866\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   id               6867 non-null   object \n",
+      " 1   title            6867 non-null   object \n",
+      " 2   subreddit        6867 non-null   object \n",
+      " 3   created_utc      6867 non-null   float64\n",
+      " 4   ups              6867 non-null   int64  \n",
+      " 5   downs            6867 non-null   int64  \n",
+      " 6   num_comments     6867 non-null   int64  \n",
+      " 7   is_video         6867 non-null   bool   \n",
+      " 8   selftext         1227 non-null   object \n",
+      " 9   is_self          6867 non-null   bool   \n",
+      " 10  score            6867 non-null   int64  \n",
+      " 11  upvote_ratio     6867 non-null   float64\n",
+      " 12  title_length     6867 non-null   int64  \n",
+      " 13  post_length      6867 non-null   int64  \n",
+      " 14  is_weekend_post  6867 non-null   bool   \n",
+      "dtypes: bool(3), float64(2), int64(6), object(4)\n",
+      "memory usage: 664.0+ KB\n",
+      "None\n",
+      "Data Head:\n",
+      "        id                                            title subreddit  \\\n",
+      "0  1ozx237                                   Life right now     funny   \n",
+      "1  1ozwwts                  Three Fights with Intermissions     funny   \n",
+      "2  1ozwm0r             \"What are some low key turnoffs?...\"     funny   \n",
+      "3  1ozvssf  Funny Sketch about Man on the Street Interviews     funny   \n",
+      "4  1ozvr4q                              Best friend in 2025     funny   \n",
+      "\n",
+      "    created_utc  ups  downs  num_comments  is_video selftext  is_self  score  \\\n",
+      "0  1.763425e+09    1      0             1      True      NaN    False      1   \n",
+      "1  1.763424e+09   18      0             3      True      NaN    False     18   \n",
+      "2  1.763424e+09    0      0             8     False      NaN    False      0   \n",
+      "3  1.763422e+09    0      0             1     False      NaN    False      0   \n",
+      "4  1.763421e+09  112      0            20     False      NaN    False    112   \n",
+      "\n",
+      "   upvote_ratio  title_length  post_length  is_weekend_post  \n",
+      "0          0.53            14            0            False  \n",
+      "1          0.80            31            0            False  \n",
+      "2          0.07            36            0            False  \n",
+      "3          0.33            47            0            False  \n",
+      "4          0.83            19            0            False  \n",
+      "        created_utc            ups   downs  num_comments          score  \\\n",
+      "count  6.867000e+03    6867.000000  6867.0   6867.000000    6867.000000   \n",
+      "mean   1.762560e+09    2108.583224     0.0     98.852920    2108.583224   \n",
+      "std    7.048594e+05    6550.981739     0.0    251.078205    6550.981739   \n",
+      "min    1.760287e+09       0.000000     0.0      0.000000       0.000000   \n",
+      "25%    1.762203e+09      19.000000     0.0      4.000000      19.000000   \n",
+      "50%    1.762764e+09     126.000000     0.0     18.000000     126.000000   \n",
+      "75%    1.763087e+09    1045.000000     0.0     77.000000    1045.000000   \n",
+      "max    1.763427e+09  123172.000000     0.0   4440.000000  123172.000000   \n",
+      "\n",
+      "       upvote_ratio  title_length   post_length  \n",
+      "count   6867.000000   6867.000000   6867.000000  \n",
+      "mean       0.829330     79.813747     67.437891  \n",
+      "std        0.207036     65.255442    314.643009  \n",
+      "min        0.040000      1.000000      0.000000  \n",
+      "25%        0.790000     36.000000      0.000000  \n",
+      "50%        0.920000     63.000000      0.000000  \n",
+      "75%        0.970000     91.500000      0.000000  \n",
+      "max        1.000000    300.000000  10108.000000  \n",
+      "\n",
+      "Unique subreddits:\n",
+      "['funny' 'todayilearned' 'technology' 'aww' 'worldnews' 'food' 'gaming']\n",
+      "is_video field is only true/false?:\n",
+      "[ True False]\n",
+      "is_self field is only true/false?:\n",
+      "[False  True]\n",
+      "is is_weekend_post being calculated properly?:\n",
+      "[False  True]\n",
+      "\n",
+      "Checking for null values in df:\n",
+      "Null id:0\n",
+      "Null title:0\n",
+      "Null subreddit:0\n",
+      "Null created_utc:0\n",
+      "Null ups:0\n",
+      "Null downs:0\n",
+      "Null num_comments:0\n",
+      "Null is_video:0\n",
+      "Null is_self:0\n",
+      "Null score:0\n",
+      "Null upvote_ratio:0\n",
+      "Null title_length:0\n",
+      "Null post_length:0\n",
+      "Null is_weekend_post:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load and visualise data\n",
+    "reddit_data = pd.read_csv(\"reddit_data.csv\", quotechar='\"', escapechar='\\\\')\n",
+    "print(\"Data Info:\")\n",
+    "print(reddit_data.info())\n",
+    "print(\"Data Head:\")\n",
+    "print(reddit_data.head())\n",
+    "\n",
+    "\n",
+    "\n",
+    "#check for issues in the numerical columns\n",
+    "print(reddit_data.describe())\n",
+    "\n",
+    "\n",
+    "#check no invalid values for categorical columns\n",
+    "print(\"\\nUnique subreddits:\")\n",
+    "print(reddit_data.subreddit.unique())\n",
+    "print(\"is_video field is only true/false?:\")\n",
+    "print(reddit_data.is_video.unique())\n",
+    "\n",
+    "print(\"is_self field is only true/false?:\")\n",
+    "print(reddit_data.is_self.unique())\n",
+    "\n",
+    "print(\"is is_weekend_post being calculated properly?:\")\n",
+    "print(reddit_data.is_weekend_post.unique())\n",
+    "\n",
+    "#ensure selftext is set to an empty string when blank\n",
+    "reddit_data[\"selftext\"] = reddit_data[\"selftext\"].fillna(\"\")\n",
+    "\n",
+    "\n",
+    "#checking for null values in other fields\n",
+    "print(\"\\nChecking for null values in df:\")\n",
+    "fields_to_check_null = [\"id\", \"title\", \"subreddit\", \"created_utc\", \"ups\", \"downs\", \"num_comments\", \"is_video\", \"is_self\", \"score\", \"upvote_ratio\", \"title_length\", \"post_length\", \"is_weekend_post\"]\n",
+    "for field in fields_to_check_null:\n",
+    "    print(f\"Null {field}:\" + str(reddit_data[field].isnull().sum()))\n",
+    "\n",
+    "\n",
+    "#remove unnecessary fields\n",
+    "reddit_data.drop(\"id\", axis=1, inplace=True)\n",
+    "reddit_data.drop(\"title\", axis=1, inplace=True)\n",
+    "reddit_data.drop(\"created_utc\", axis=1, inplace=True)\n",
+    "reddit_data.drop(\"selftext\", axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb34dea0",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Findings during data cleaning\n",
+    "- The info on numerical columns shown with `reddit_data.info()` show figures in reasonable ranges with no problematic max or min values.\n",
+    "- The categorical columns show normal value, excluding \"selftext\" which is unique to each post.\n",
+    "- When the pandas dataframe is created, blank values in the \"selftext\" field appeared as NaN, these needed to be changed to empty string literals.\n",
+    "- Investigation showed that the data had no missing / null values other than those in the selftext field, which represents a post with no textual content.\n",
+    "\n",
+    "The columns of id, title, created_utc, and selftext were removed as they will not play a role in the machine learning model development."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d78a58b7",
+   "metadata": {},
    "source": []
   }
  ],
