--- a/DataMining.ipynb
+++ b/DataMining.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "29971bd8",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,8 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import csv\n",
+    "import requests\n",
+    "from datetime import datetime\n",
     "\n",
     "# env variables\n",
     "load_dotenv()\n",
@@ -42,7 +44,8 @@
     "\n",
     "\n",
     "SUBREDDITS = [\"funny\", \"todayilearned\", \"technology\", \"aww\", \"worldnews\", \"food\", \"gaming\"]\n",
-    "VARIABLES = [\"id\", \"title\", \"subreddit\", \"created_utc\", \"ups\", \"downs\", \"is_video\", \"selftext\", \"is_self\"]\n",
+    "VARIABLES = [\"id\", \"title\", \"subreddit\", \"created_utc\", \"ups\", \"downs\", \"num_comments\", \"is_video\", \"selftext\", \"is_self\", \"score\", \"upvote_ratio\"]\n",
+    "CUSTOM_VARS = [\"title_length\", \"post_length\", \"is_weekend_post\"]\n",
     "\n",
     "\n",
     "reddit = praw.Reddit(\n",
@@ -51,14 +54,24 @@
     "    user_agent=USER_AGENT\n",
     ")\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# using csv library to avoid dealing with comma/quotes/other chars that would need to be escaped\n",
     "# https://stackoverflow.com/questions/2425272/how-to-dynamically-access-class-properties-in-python referenced to fix issue looping through submission object\n",
     "with open(\"reddit_data.csv\", \"w\", encoding=\"utf-8\") as f:\n",
     "    csv_writer = csv.writer(f)\n",
-    "    csv_writer.writerow(VARIABLES)\n",
+    "    csv_writer.writerow(VARIABLES + CUSTOM_VARS)\n",
     "    for sub in SUBREDDITS:        \n",
     "        for submission in reddit.subreddit(sub).new(limit=6000):\n",
     "            data = [getattr(submission, var) for var in VARIABLES]\n",
+    "            data.append(len(getattr(submission, \"title\"))) #title length\n",
+    "            data.append(len(getattr(submission, \"selftext\"))) # post length\n",
+    "            data.append(datetime.utcfromtimestamp(submission.created_utc).weekday() in [5, 6]) #datetime mon - sun is 0-6\n",
     "            csv_writer.writerow(data)\n"
    ]
   },
